--- a/restaurantes.html
+++ b/restaurantes.html
@@ -137,7 +137,7 @@
             <div class="col-lg-4 col-md-6">
               <div class="hotel-wrap">
                 <div class="hotel-img">
-                  <img src="assets/images/hero-banner.webp" alt="" />
+                  <img src="assets/images/eiffeltowerrestaurant.jpg" alt="" />
                 </div>
                 <div class="hotel-txt">
                   <h3>Eiffel Tower</h3>
@@ -156,7 +156,7 @@
             <div class="col-lg-4 col-md-6">
               <div class="hotel-wrap">
                 <div class="hotel-img">
-                  <img src="assets/images/hero-banner.webp" alt="" />
+                  <img src="assets/images/rwlasvegas.jpg" alt="" />
                 </div>
                 <div class="hotel-txt">
                   <h3>Alle on 66 - Resorts World Las Vegas</h3>
@@ -174,7 +174,7 @@
             <div class="col-lg-4 col-md-6">
               <div class="hotel-wrap">
                 <div class="hotel-img">
-                  <img src="assets/images/hero-banner.webp" alt="" />
+                  <img src="assets/images/Mr-Mamas.jpg" alt="" />
                 </div>
                 <div class="hotel-txt">
                   <h3>Mr. Mamas</h3>
@@ -197,7 +197,7 @@
             <div class="col-lg-6 col-md-6">
                 <div class="hotel-wrap">
                   <div class="hotel-img">
-                    <img src="assets/images/hero-banner.webp" alt="" />
+                    <img src="assets/images/theeggworks.jpg" alt="" />
                   </div>
                   <div class="hotel-txt">
                     <h3>The Egg and I</h3>
@@ -217,7 +217,7 @@
               <div class="col-lg-6 col-md-12">
                 <div class="hotel-wrap">
                   <div class="hotel-img">
-                    <img src="assets/images/hero-banner.webp" alt="" />
+                    <img src="assets/images/Fat-Tuesday-Miracle.jpg" alt="" />
                   </div>
                   <div class="hotel-txt">
                     <h3>Fat Tuesday Miracle Mile Shops 505</h3>
