--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
     <!-- banner section start  -->
     <section class="site-banner">
-      <div class="overlay"></div>
+      <div class="overlay" style="opacity: 0.2;"></div>
       <div class="banner-wrap">
          <div class="banner-txt">
                <h1>
