--- a/alojamiento.html
+++ b/alojamiento.html
@@ -12,6 +12,8 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     />
+    <link rel="stylesheet" href="https://cdn.rawgit.com/michalsnik/aos/2.0.4/dist/aos.css">
+
     <link rel="icon" href="assets/images/fav-icn.png" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/media.css" />
@@ -102,7 +104,7 @@
     <!-- banner section end  -->
 
     <div class="casino-welcome ptb-70">
-      <div class="casino-wrap">
+      <div class="casino-wrap " data-aos="fade-up" data-aos-anchor-placement="top-center">
         <div class="casino-left">
           <img src="assets/images/casino-wel.jpg" alt="" />
         </div>
@@ -589,7 +591,14 @@
     <!-- footer section end -->
 
     <script src="assets/js/jquery-3.7.1.min.js"></script>
+    <script src="https://cdn.rawgit.com/michalsnik/aos/2.0.4/dist/aos.js"></script>
+
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/custom.js"></script>
+    <script>
+      AOS.init({
+        duration: 1000
+      });
+    </script>
   </body>
 </html>
