--- a/alojamiento.html
+++ b/alojamiento.html
@@ -501,6 +501,21 @@
       <!-- hotel card end  -->
     </div>
 
+    <div class="conclusion-sec">
+      <div class="container">
+        <div class="conclusion-wrap">
+           <p>
+            Ya sea que tus próximas vacaciones sean en un hotel con casino o un resort todo incluido, nosotros
+            en Topbetrates tenemos la opción de hospedaje que tú estás buscando para tu familia.
+           </p>
+           <p>
+            Si tiene algo en mente y no se encuentra en esta lista, no dudes en contactarnos, estaremos
+            encantados de ayudarte a responder todas las preguntas.
+           </p>
+        </div>
+      </div>
+    </div>
+
     <!-- footer section start -->
     <div class="site-footer ptb-70">
       <div class="container">
