--- a/atracciones.html
+++ b/atracciones.html
@@ -99,19 +99,14 @@
         </div>
         <div class="casino-right">
           <p>
-            ¡Bienvenidos a Las Vegas, la capital mundial del entretenimiento y las atracciones emocionantes! En
-            la ciudad donde los sueños se hacen realidad y la diversión nunca termina, cada rincón ofrece una
-            experiencia única que cautivará sus sentidos y lo dejará maravillado.
+            Las Vegas es la capital mundial del entretenimiento y las atracciones emocionantes. En la ciudad
+            donde los sueños se hacen realidad y la diversión nunca termina, cada rincón ofrece una experiencia
+            única que cautivará sus sentidos y lo dejará maravillado.
           </p>
           <p>
             ¿Listo para sumergirse en un mundo de fantasía y aventura? Únase a nosotros mientras exploramos
             las atracciones más emocionantes de Las Vegas, desde montañas rusas que desafían la gravedad
             hasta espectáculos acuáticos de ensueño y exposiciones de arte que lo dejarán sin aliento.
-          </p>
-          <p>
-            Bienvenidos a Las Vegas, donde la emoción nunca termina y cada momento es una oportunidad para
-            crear recuerdos que durarán toda la vida. ¡Prepárese para una aventura inolvidable que lo dejará
-            deseando volver por más!
           </p>
         </div>
       </div>
@@ -237,6 +232,26 @@
 
     
     </div>
+
+
+
+    <div class="conclusion-sec">
+      <div class="container">
+        <div class="conclusion-wrap">
+           <p>
+            Las Vegas es el lugar que tiene todo tipo de atracciones y espectáculos para todos los gustos,
+            desde casinos, conciertos, performance, caminatas en la naturaleza hasta jardines botánicos
+            como el de Alicia en el País de las maravillas.
+           </p>
+           <p>
+            Estas opciones fueron solo algunas de nuestras reviews. Si estás buscando algo en
+            particular, estaremos felices de ayudarte a encontrar tu lugar de entretenimiento favorito.
+           </p>
+        </div>
+      </div>
+    </div>
+
+
 
     <!-- footer section start -->
     <div class="site-footer ptb-70">
