--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
               que esté situada en el corazón del desierto de Mojave sólo sirve para realzar su notable calidad.
             </p>
             <p>
-              En topbetrates encontrarás todas las opciones de viajes necesarias para hacer de tu experiencia en
+              En Topbetrates encontrarás todas las opciones de viajes necesarias para hacer de tu experiencia en
               Las Vegas unica en inigualable, ya sea que viajes desde Perú o decidas hacer otra escala en
-              cualquier otro pais, aqui en topbetrates.com te dejamos varias recomendaciones de hoteles con
-              casino, todo incluido, hoteles economicos, atracciones y restaurantes. Siéntete libre de contactarnos
-              por si tienes preguntas.
+              cualquier otro pais, aqui en Topbetrates te dejamos varias recomendaciones de hoteles con casino,
+              todo incluido, hoteles economicos, atracciones y restaurantes. Siéntete libre de contactarnos por si
+              tienes preguntas.
             </p>
           </div>
         </div>
@@ -200,8 +200,23 @@
         </div>
       </div>
     </div>
-
     <!-- hotel card end  -->
+
+    <div class="conclusion-sec">
+      <div class="container">
+        <div class="conclusion-wrap">
+           <p>
+            Viajar a las Vegas es más que una experiencia en la vida, es por eso que en Topbetrates
+            nos tomamos en serio que la planeación de tu viaje sea lo más sencilla posible. Si estás en
+            busca de algún hotel con Casino en particular o alguna atracción que no esté enlistada o
+            revisada en nuestro sitio, siéntete libre de contactarnos.
+           </p>
+           <p>
+            Nuestro equipo de servicio al cliente estará dispuesto en asesorarte o escuchar tus dudas.
+           </p>
+        </div>
+      </div>
+    </div>
 
     <!-- footer section start -->
     <div class="site-footer ptb-70">
