--- a/restaurantes.html
+++ b/restaurantes.html
@@ -242,6 +242,27 @@
     
     </div>
 
+
+
+    <div class="conclusion-sec">
+      <div class="container">
+        <div class="conclusion-wrap">
+           <p>
+            Si eres de los que les encanta la gastronomía en Las Vegas vas a poder deleitarte con la infinidad de
+            sabores que encontrarás, desde restaurantes con estrella Michelin hasta foodtruck. Existe una
+            diversidad que no sabrás que escoger.
+           </p>
+           <p>
+            Esta fue nuestra pequeña review sobre lugares donde comer en las vegas pero si estas en busca de
+            algo en particular no dudes en contactarnos, nuestros equipo tienes las mejores recomendaciones
+            para ti y toda tu familia.
+           </p>
+        </div>
+      </div>
+    </div>
+
+
+
     <!-- footer section start -->
     <div class="site-footer ptb-70">
       <div class="container">
