--- a/contact-us.html
+++ b/contact-us.html
@@ -154,19 +154,19 @@
                                     </h3>
                                 </div>
                                 <div class="form-group">
-                                    <input type="text" placeholder="First Name">
+                                    <input type="text" placeholder="Nombre">
                                 </div>
                                 <div class="form-group">
-                                    <input type="text" placeholder="Last Name">
+                                    <input type="text" placeholder="Apellido">
                                 </div>
                                 <div class="form-group">
-                                    <input type="email" placeholder="Enter Email">
+                                    <input type="email" placeholder="Correo Electrónico">
                                 </div>
                               
                                 <div class="form-group">
-                                    <textarea placeholder="Message"></textarea>
+                                    <textarea placeholder="Mensaje"></textarea>
                                 </div>
-                                <button>Submit</button>
+                                <button>Enviar</button>
                             </form>
                         </div>
                     </div>
