--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -357,7 +357,14 @@ Términos y condiciones.
         </div>
     </div>
         </div>
-      </div>        
+      </div>      
+      <div class="copy-right">
+        <div class="container">
+          <p>
+            © Copyright 2024 topbetrates.com
+          </p>
+        </div>
+    </div>   
     </div>
     <!-- footer section end -->
 
