--- a/term-and-condition.html
+++ b/term-and-condition.html
@@ -543,7 +543,14 @@ gratuita, no seremos responsables de ninguna pérdida o daño de cualquier natur
           </div>
       </div>
           </div>
-        </div>        
+        </div>  
+        <div class="copy-right">
+          <div class="container">
+            <p>
+              © Copyright 2024 topbetrates.com
+            </p>
+          </div>
+      </div>       
       </div>
     <!-- footer section end -->
 
