--- a/alojamiento.html
+++ b/alojamiento.html
@@ -594,6 +594,13 @@
           </div>
         </div>
       </div>
+      <div class="copy-right">
+        <div class="container">
+          <p>
+            © Copyright 2024 topbetrates.com
+          </p>
+        </div>
+    </div>    
     </div>
     <!-- footer section end -->
 
