--- a/contact-us.html
+++ b/contact-us.html
@@ -261,7 +261,14 @@
         </div>
     </div>
         </div>
-      </div>        
+      </div>    
+      <div class="copy-right">
+        <div class="container">
+          <p>
+            © Copyright 2024 topbetrates.com
+          </p>
+        </div>
+    </div>     
     </div>
     <!-- footer section end -->
 
